--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^6.3.4",
     "axios": "^1.2.0",
     "expo": "~47.0.6",
+    "expo-secure-store": "^12.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
